# applied-ai

./: .gitignore  .gitmodules  CONTRIBUTING.md  kernel_2_tiled_matmul.py  readme.md
assets/images/: readme.md
assets/images/dev-discuss-asynctp/: readme.md
cuda/tutorials/: flash2.cu
dev/sr/: .gitignore  base2.ncu-rep  base22.ncu-rep  base3.ncu-rep  base4.ncu-rep  base5.ncu-rep  basevec4.ncu-rep  philox7_128vec4curand4.ncu-rep  philox7_256vec4curand4.ncu-rep  philox7_2vec4curand4.ncu-rep  philox7vec4curand4.ncu-rep  readme.md  setup.py  sr_cuda.cpp  sr_kernel.cu  test.md  usage.py  usage2.py
dev/sr/src/: current_unit_test_failures.md  sr_kernel.cu  stochastic_rounding.cu  stochastic_rounding.hpp  stochastic_rounding_cuda.cu
dev/sr/tests/: backup_fp16_unit_tests_old.py  benchmark.py  bf16_unit_tests.py  common_test_utils.py  compare_triton_bench.py  core_unit_tests.py  debug_fp16.py  fp16_unit_tests.py  new_fp16_tests.py  pretty_benchmarking.py  profile_bf16.py  triton_bench.py
dev/triton_groupGEMM/: backwards_pass.py  groupgemm.py  triton_tutorial_groupgemm.py
dev/triton_groupGEMM/clean/: current_errs.py  debug_gg.py  fast_debug.py  unit_tests_back.py  (+4 more)
kernels/cutlass/group_gemm/: CMakeLists.txt  group_gemm.cuh  readme.md  test_grouped_gemm.cu
kernels/needs_perf_help/: fp8_gemm_bench.py  fp8_rowwise_tma_persistent.py
nanoGPT_TP/config/: base_config.py
nanogpt_tp/: gpu_memory.py  readme.md  tp_train.py  train.py
nanogpt_tp/config/: nanogpt_2D.py
tests/: test_triton_softmax.py  test_utils.py
triton/tutorials/: readme.md
triton_kernels/: softmax.py
(+112 files in other folders)
